--- a/ecom-project/src/styles.css
+++ b/ecom-project/src/styles.css
@@ -25,3 +25,9 @@ body{
     border: 1px solid rgb(14, 93, 14);
     cursor: pointer;
 }
+.error-p{
+    color: red;
+}
+.message-p{
+    color: green;
+}
