--- a/ecom-project/src/app/header/header.component.html
+++ b/ecom-project/src/app/header/header.component.html
@@ -1,13 +1,21 @@
 <nav class="nav">
-<h1>CoderSpace</h1>
-<div class="nav-search">
+<h1><a routerLink="/">CoderSpace</a></h1>
+<div *ngIf="menuType==='default'" class="nav-search">
     <input type="text" placeholder="Search for Courses" />
     <button>Search</button>
 </div>
-<ul>
-    <li><a routerLink="">Home</a></li>
-    <li><a routerLink="seller-auth">Instructor</a></li>
-    <li><a href="#">Login</a></li>
-    <li><a href="#">Cart(0)</a></li>
-</ul>
+<div [ngSwitch]="menuType">
+    <ul *ngSwitchCase="'default'">
+        <li><a routerLink="">Home</a></li>
+        <li><a routerLink="seller-auth">Instructor</a></li>
+        <li><a href="#">Login</a></li>
+        <li><a href="#">Cart(0)</a></li>
+    </ul>
+    <ul *ngSwitchCase="'seller'">
+        <li><a routerLink="/seller-home">Course List</a></li>
+        <li><a routerLink="seller-add-product">Add Course</a></li>
+        <li><a (click)="logout()">Logout</a></li>
+        <li><a href="#">{{sellerName | titlecase}}</a></li>
+    </ul>
+</div>
 </nav>
